--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,6 @@ MONGODB_URI="mongodb+srv://projectweb:IT4409@cluster0.1lb3v.mongodb.net"
 CLOUDINARY_CLOUD_NAME="duqhclazz"
 CLOUDINARY_API_KEY="156284885892269"
 CLOUDINARY_API_SECRET="PA_CwKIf8MkrE_FHXDq6m8C1dso"
+JWT_SECRET="projectweb"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="admin"
