feat: add momo payment

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,6 @@ CLOUDINARY_API_SECRET="PA_CwKIf8MkrE_FHXDq6m8C1dso"
 JWT_SECRET="projectweb"
 ADMIN_EMAIL="admin@gmail.com"
 ADMIN_PASSWORD="admin"
+MOMO_PARTNER_CODE="MOMO"
+MOMO_SECRET_KEY="K951B6PE1waDMi640xX08PD3vg6EkVlz"
+MOMO_ACCESS_KEY="F8BBA842ECF85"
