--- a/admin/package.json
+++ b/admin/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
