--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.4",
+    "server": "file:",
     "socket.io": "^4.8.1",
     "stripe": "^17.2.1",
     "validator": "^13.12.0"
