--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "client": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1"
